Replace abbreviated variable names with full names
Add code convention to CLAUDE.md prohibiting abbreviated variable
names and apply it across the codebase: stmt→statement,
conn→connection, ds→jdbcDataSource/dataSource, sb→stringBuilder,
pstmt→statement, recordingDs→recordingDataSource.